#	Top level configure file for tk when bundled to insight.

TOPDIR="`dirname \"${0}\"`"
TOPDIR=`cd "${TOPDIR}"; pwd`
SRCDIR="${TOPDIR}/@TARGETOS@"

#	Create the top level Makefile.
cat > "${TOPDIR}/Makefile" << 'EOF'
MAKEFILEDIR := $(abspath $(dir $(lastword $(MAKEFILE_LIST))))

notarget:
	cd "$(MAKEFILEDIR)/@TARGETOS@" && $(MAKE) $(MAKECMDGOALS)

.DEFAULT:
	cd "$(MAKEFILEDIR)/@TARGETOS@" && $(MAKE) $(MAKECMDGOALS)
EOF

#	Configure in the target-specific directory.
cd "${SRCDIR}" && exec ./configure "${@}" --srcdir="${SRCDIR}"
